[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pytlsrpt"
version = "0.0.1"
authors = [
  { name="sys4 AG", email="info@sys4.de" },
  { name="Boris Lohner", email="bl@sys4.de"},
]
description = "Receiver, fetcher and reporter software for SMTP TLS reporting (TLSRPT)"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
test = [
  "tox",
]
dev = [
  "build==1.2.2",
  "twine==5.1.1",
]

[project.urls]
"Homepage" = "https://github.com/sys4/tlsrpt"
"Bug Tracker" = "https://github.com/sys4/tlsrpt/issues"

[project.scripts]
tlsrpt-fetcher = "pytlsrpt.tlsrpt:tlsrpt_fetcher_main"
tlsrpt-collectd = "pytlsrpt.tlsrpt:tlsrpt_collectd_main"
tlsrpt-reporter = "pytlsrpt.tlsrpt:tlsrpt_reporter_main"

[project.entry-points."tlsrpt.collectd"]
sqlite = "pytlsrpt.tlsrpt:TLSRPTReceiverSQLite"
dummy = "pytlsrpt.tlsrpt:DummyReceiver"

[project.entry-points."tlsrpt.fetcher"]
sqlite = "pytlsrpt.tlsrpt:TLSRPTFetcherSQLite"

[tool.hatch.build]
only-packages = false

[tool.hatch.build.targets.wheel]
packages = ["pytlsrpt"]
