[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlsrpt_reporter"
version = "0.5.0rc1"
authors = [
  { name="sys4 AG", email="info@sys4.de" },
  { name="Boris Lohner", email="bl@sys4.de"},
]
description = "Collectd, fetcher and reportd software for SMTP TLS reporting (TLSRPT)"
readme = "README.md"
requires-python = ">=3.7"
license = "GPL-3.0-or-later"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.optional-dependencies]
test = [
  "tox",
]
dev = [
  "build==1.2.2",
  "twine==5.1.1",
]

[project.urls]
"Homepage" = "https://github.com/sys4/tlsrpt-reporter"
"Bug Tracker" = "https://github.com/sys4/tlsrpt-reporter/issues"

[project.scripts]
tlsrpt-fetcher = "tlsrpt_reporter.tlsrpt:tlsrpt_fetcher_main"
tlsrpt-collectd = "tlsrpt_reporter.tlsrpt:tlsrpt_collectd_main"
tlsrpt-reportd = "tlsrpt_reporter.tlsrpt:tlsrpt_reportd_main"

[project.entry-points."tlsrpt.collectd"]
sqlite = "tlsrpt_reporter.tlsrpt:TLSRPTCollectdSQLite"
dummy = "tlsrpt_reporter.tlsrpt:DummyCollectd"

[project.entry-points."tlsrpt.fetcher"]
sqlite = "tlsrpt_reporter.tlsrpt:TLSRPTFetcherSQLite"

[tool.hatch.build]
only-packages = false

[tool.hatch.build.targets.wheel]
packages = ["tlsrpt_reporter"]
